Rename project from VkNoon to Noon Remove CMakePolicies Cleanup generate-launch-targets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.20 FATAL_ERROR)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.19 FATAL_ERROR)
 
 # Allow for custom CMake modules
 LIST(PREPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake)
@@ -7,9 +7,12 @@ LIST(PREPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake)
 ### Project
 ###
 
-INCLUDE(CMakePolicies)
+# Allow PROJECT() to manage versions
+IF(POLICY CMP0048)
+    CMAKE_POLICY(SET CMP0048 NEW)
+ENDIF()
 
-PROJECT(VkNoon)
+PROJECT(Noon)
 
 INCLUDE(ProjectVersion)
 
