WIP GraphicsDriver, Buffer Now renders a black screen Move Application ctor/dtor to Init/Term

--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -111,7 +111,7 @@ TARGET_COMPILE_OPTIONS(
 
         # Enable most warnings, disable unknown pragmas warning
         $<$<CXX_COMPILER_ID:GNU>:   -Wall -Wno-unknown-pragmas>
-        $<$<CXX_COMPILER_ID:Clang>: -Wall -Wno-unknown-pragmas>
+        $<$<CXX_COMPILER_ID:Clang>: -Wall -Wno-unknown-pragmas -Wno-nullability-completeness>
         $<$<CXX_COMPILER_ID:MSVC>:  /wd4068>
 )
 
